# sequra-de-challenge

./: Dockerfile  README.md  docker-compose.yml  install_airflow.sh  pyproject.toml  redshift_queries.sql
data/raw/2025/06/27/: 20250627-155509-novalid.json  20250627-155509.json
data/schemas/v5/: v5_schema.json
data/validated/2025/06/27/: 20250627-151738.parquet  20250627-155509-novalid.parquet  20250627-155509.parquet
etl/: dag.py  extract_raw_data.py  load_data_to_redshift.py  transform_and_validate.py
infraestructure/: README.md  main.tf
