[project]
name = "sequrachallenge"
version = "0.0.1"
description = "Data engineering challenge"
authors = [
    { name = "David", email = "davidretanaribeiro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests~=2.32.4",
    "pyarrow~=20.0.0",
    "fastparquet~=2024.11.0",
    "pandas==2.3.0",
    "jsonschema==4.24.0"
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest"
]

[tool.uv]
